2006-05-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/ansi2knr.am (ansi2knr): Rename target as...
	(./ansi2knr): ...this, for BSD make.
	(%ANSI2KNR-DIR%/ansi2knr): Adjust.

2006-05-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/depcomp6.test, tests/depcomp7.test: Cater for OpenBSD
	/bin/sh -e issue with failing commands in if clauses.

	* tests/defs.in (Be Bourne compatible): Update from current
	Autoconf.

	* configure.ac: Recommend perl-5.8.2.
	* tests/automake.test: Do not fail because of buggy Getopt::Long
	in perl < 5.8.2.

	* tests/longlin2.test: Do not use `grep' on Makefile.am:
	it has long lines and is thus not a text file; AIX 5.1 grep
	fails to scan non-plain patterns from long lines.

	* tests/overrid.test: Change all regexes for warning messages to
	match after a colon, so that the prepended file names do not
	cause false matches.  Tighten overrides regex.  Fix typo
	`cleam-am-local' -> `clean-am-local'.

	* tests/java.test: `configure' uses a trap, so use `(exit 77);
	exit 77' to portably set the exit status similar to AS_EXIT.
	* tests/fn99.test: propagate nonzero exit status from subshell.

	* tests/mkinst3.test: Fix `mkdir' wrapper to not be confused
	if ``pwd`' contains the string `-p'.  Create the wrapper in a
	subdirectory so that `.' in $PATH does not lead to an endless
	loop.

	* lib/depcomp (ia64hp): Rename dependency style to..
	(hp2): ..this, as it works with aCC on HPPA, too; adjust
	comment.  Report by Olivier Fourdan (PR automake/481).
	* THANKS: Update.

	* tests/aclocal7.test: Add `$sleep's between file touching
	and automake resp aclocal+automake invocations, to ensure
	they complete with a time stamp strictly later than the touched
	file.

	* lib/missing: Remove superfluous quotes.  Replace all uses of
	`[' by `test', for consistency, and for..
	* tests/missing5.test: ..this new test.
	* tests/Makefile.am: Update.

	* lib/missing (sed_minuso, sed_output): New variables.