@@ -19,7 +19,9 @@
 # Boston, MA 02110-1301, USA.
 
 # Test to make sure subdirs in EXTRA_DIST work.  Also tests to make
-# sure "./" is ignored and *srcdir properly handled.
+# sure *srcdir is properly handled.  Note that using `./', as in
+#   EXTRA_DIST = ./joe
+# does not work portably: it fails with HP-UX and Tru64 make.
 
 . ./defs || exit 1
 
@@ -28,7 +30,7 @@ set -e
 echo AC_OUTPUT >>configure.in
 
 cat > Makefile.am << 'END'
-EXTRA_DIST = foo/bar ./joe $(top_srcdir)/woo/doo $(srcdir)/dada
+EXTRA_DIST = foo/bar joe $(top_srcdir)/woo/doo $(srcdir)/dada
 check-local:
 	test -f $(srcdir)/foo/bar
 	test -f $(srcdir)/woo/doo
