@@ -1,5 +1,9 @@
 2006-05-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/distdir.test: Do not use leading `./' in EXTRA_DIST for
+	files in the source tree.  Fixes failures with HP-UX and Tru64
+	make.
+
 	* lib/am/ansi2knr.am (ansi2knr): Rename target as...
 	(./ansi2knr): ...this, for BSD make.
 	(%ANSI2KNR-DIR%/ansi2knr): Adjust.
